deployment/deploy-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cilist-be
  labels:
    app: cilist-be
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cilist-be
  template:
    metadata:
      labels:
        app: cilist-be
    spec:
      # volumes:
      # - name: volume-backend-env
      #   secret:
      #     secretName: cilist-secret-be
      containers:
      - name: backend
        image: profesorgreen36/cilist_backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        # volumeMounts:
        # - name: volume-backend-env
        #   mountPath: "/app/.env"
        #   subPath: ".env"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: cilist-be
  ports:
  - port: 5000
    protocol: "TCP"
