deployment/deploy-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cilist-fe
  labels:
    app: cilist-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cilist-fe
  template:
    metadata:
      labels:
        app: cilist-fe
    spec:
      containers:
      - name: frontend
        image: profesorgreen36/cilist_frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: cilist-fe
  ports:
  - port: 3000
    targetPort: 3000
