deployment/cilist-be-staging.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cilist-be
  labels:
    app: cilist-be
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cilist-be
  template:
    metadata:
      labels:
        app: cilist-be
    spec:
      volumes:
      - name: env-cilist-be
        configMap:
          name: configmap-cilist-be
      containers:
      - name: backend
        image: profesorgreen36/cilist_backend:staging
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: env-cilist-be
          mountPath: "/app/.env"
          subPath: ".env"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: cilist-be
  ports:
  - port: 5000
    protocol: "TCP"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-be
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /users/$2
spec:
  ingressClassName: nginx
  rules:
    - host: backend-staging.bpkurikulum.my.id
      http:
        paths:
          - path: /users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
